# 2023_TACHYON_AEV

./: README.md
aev_speedometer/src/: odometer.cpp  odometer.h
arduinocontrol/: arduinocontrol.ino
encoder/: CMakeLists.txt  package.xml
encoder/include/: encode.h
encoder/src/: encoding.cpp
odometer/: CMakeLists.txt  package.xml
odometer/include/: odometer.h
odometer/launch/: odometer.launch
odometer/msg/: speed_msg.msg
odometer/src/: odometer.cpp  odometer.py
raspberry_pi_can/: CMakeLists.txt  package.xml
raspberry_pi_can/msg/: CanMsg.msg
raspberry_pi_can/src/: can_publisher.cpp
rosserialcontrol/: rosserialcontrol.ino
steerControl/: CMakeLists.txt  package.xml
steerControl/include/: steering.h
steerControl/src/: steeringControl.cpp
steercontrol_serial/: CMakeLists.txt  package.xml
steercontrol_serial/include/steercontrol_serial/: steercontrol_serial.h
steercontrol_serial/src/: steercontrol_serial.cpp
velocityControl/: CMakeLists.txt  package.xml
velocityControl/include/: velocityControl.h
velocityControl/msg/: misson_msg.msg  velocity_msg.msg
velocityControl/src/: velocityControl.cpp
